--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
          <img src="images/i2.png" alt="Logo" style="width:60px;">
        </a>
        <div class="input">
